// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrator (mongo) generate blank migration: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations-mongodb';

export class Migration20191013214813 extends Migration {

  async up(): Promise<void> {
  }

}
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (mongo) generate js schema migration: migration-js-dump 1`] = `
{
  "code": "'use strict';
Object.defineProperty(exports, '__esModule', { value: true });
const { Migration } = require('@mikro-orm/migrations-mongodb');

class Migration20191013214813 extends Migration {

  async up() {
  }

}
exports.Migration20191013214813 = Migration20191013214813;
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "Migration20191013214813.js",
}
`;

exports[`Migrator (mongo) generate migration with custom name with name option: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations-mongodb';

export class Migration20191013214813_custom_name extends Migration {

  async up(): Promise<void> {
  }

}
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "migration20191013214813_custom_name.ts",
}
`;

exports[`Migrator (mongo) generate migration with custom name: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations-mongodb';

export class Migration20191013214813 extends Migration {

  async up(): Promise<void> {
  }

}
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "migration-20191013214813.ts",
}
`;

exports[`Migrator (mongo) up/down params [all or nothing disabled]: all-or-nothing-disabled 1`] = `
[
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', created_at: ISODate(...) }, {});",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, {});",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', created_at: ISODate(...) }, {});",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, {});",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', created_at: ISODate(...) }, {});",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, {});",
]
`;

exports[`Migrator (mongo) up/down params [all or nothing enabled]: all-or-nothing 1`] = `
[
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', created_at: ISODate('2019-10-13T21:48:13.382Z') }, { session: '[ClientSession]' });",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, { session: '[ClientSession]' });",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', created_at: ISODate('2019-10-13T21:48:13.382Z') }, { session: '[ClientSession]' });",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, { session: '[ClientSession]' });",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', created_at: ISODate('2019-10-13T21:48:13.382Z') }, { session: '[ClientSession]' });",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, { session: '[ClientSession]' });",
  "db.commit();",
]
`;

exports[`Migrator (mongo) up/down with explicit transaction: explicit-tx 1`] = `
[
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20200922100001', created_at: ISODate(...) }, { session: '[ClientSession]' });",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20200922100002', created_at: ISODate(...) }, { session: '[ClientSession]' });",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20200922100002', 'Migration20200922100002' ] } }, { session: '[ClientSession]' });",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20200922100001', 'Migration20200922100001' ] } }, { session: '[ClientSession]' });",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.commit();",
]
`;
